# factory_monitor

./: .gitignore  README.md
factory-monitor-ai/: .dockerignore  .env.example  .gitignore  Makefile  README.md  compose.observability.yaml  compose.yaml  pyproject.toml
factory-monitor-ai/cloud/api/: Dockerfile  deps.py  main.py  routes.py  twilio_webhook.py  ws.py
factory-monitor-ai/cloud/api/ws/: __init__.py  broadcaster.py  subscriber.py
factory-monitor-ai/cloud/common/: config.py  escalation.py  incident_actions.py  kafka.py  logging_json.py  metrics.py  on_call_resolver.py  redis_client.py  seed_cameras.py  seed_demo.py  telemetry.py  ws_events.py  ws_publisher.py
factory-monitor-ai/cloud/common/db/: base.py  models.py  session.py
factory-monitor-ai/cloud/common/schemas/: anomaly.py  camera.py  heatmap.py  incident.py
factory-monitor-ai/cloud/common/ws/: broadcaster.py  contract.py  detection_hub.py  fallback.py  fanout.py  heatmap_hub.py  incident_view.py  manager.py  subscriber.py
factory-monitor-ai/cloud/escalation_worker/: Dockerfile  __main__.py  ack_service.py  on_call_resolver.py  transition.py  worker.py
factory-monitor-ai/cloud/heatmap_worker/: Dockerfile  __main__.py  consumer.py
factory-monitor-ai/cloud/ingest_worker/: Dockerfile  __main__.py  consumer.py  service.py
factory-monitor-ai/cloud/migrations/: alembic.ini  env.py
factory-monitor-ai/cloud/migrations/versions/: 0001_initial_schema.py  0002_outbox_two_phase_sending.py  0003_outbox_pending_sending_index.py  0004_density_query_index.py
factory-monitor-ai/cloud/notifications/: chain.py  console.py  console_provider.py  provider.py  twilio_sms.py  twilio_whatsapp.py
factory-monitor-ai/cloud/notifier_worker/: Dockerfile  __main__.py  relay.py
factory-monitor-ai/cloud/tests/: conftest.py  test_anomaly_schema.py  test_compose_config.py  test_compose_phase4a_wiring.py  test_config.py  test_detection_hub.py  test_heatmap_hub.py  test_heatmap_worker.py  test_helm_chart.py  test_k6_script.py  test_kafka_init.py  test_kafka_roundtrip.py  test_keda_manifests.py  test_load_producer.py  test_migration_applies.py  test_models_metadata.py  test_obs_logs_config.py  test_phase0_checkpoint.py  test_prometheus_config.py  test_readme_ws_section.py  test_repo_layout.py
factory-monitor-ai/cloud/tests/chaos/: test_escalation_exactly_once.py  test_notifier_exactly_once.py
factory-monitor-ai/cloud/tests/integration/: test_ack_resolve_api.py  test_alert_rules.py  test_api_cameras.py  test_api_heatmap.py  test_api_incidents.py  test_app_lifespan.py  test_compose_observability_config_cmd.py  test_compose_observability_wiring.py  test_compose_phase2a_wiring.py  test_compose_phase2b_wiring.py  test_compose_services.py  test_db_gauge_collectors.py  test_escalation_transition.py  test_escalation_worker.py  test_incident_service.py  test_ingest_consumer.py  test_ingest_outbox.py  test_notifier_e2e.py  test_notifier_relay.py  test_observability_configs_parse.py  test_on_call_resolver.py  test_one_trace_e2e.py  test_phase1_e2e.py  test_phase2a_e2e.py  test_reconciliation.py  test_seed_demo.py  test_twilio_webhook.py  test_writer_publish.py  test_ws_broadcaster.py  test_ws_contract.py  test_ws_fallback.py  test_ws_fanout_supervisor.py  test_ws_live_e2e.py  test_ws_live_endpoint.py  test_ws_manager.py  test_ws_subscriber.py
factory-monitor-ai/cloud/tests/unit/: test_console_provider.py  test_grafana_dashboards.py  test_logging_json.py  test_metrics.py  test_obs_traces_config.py  test_provider_chain.py  test_provider_protocol.py  test_telemetry.py  test_twilio_sms_provider.py  test_twilio_whatsapp_provider.py  test_ws_events.py  test_ws_publisher.py
factory-monitor-ai/cloud/tools/: consume_print.py  publish_fixture.py
factory-monitor-ai/deploy/: README.md
factory-monitor-ai/deploy/helm/factory-monitor/: .helmignore  Chart.yaml  values-cloud.yaml  values.yaml
factory-monitor-ai/deploy/k8s/observability/: kube-prometheus-stack-values.yaml
factory-monitor-ai/edge/: .dockerignore  Dockerfile  requirements.txt
factory-monitor-ai/edge/config/cameras/: cam_01.yaml  cam_02.yaml  cam_03.yaml  cam_04.yaml  cam_05.yaml  cam_06.yaml
factory-monitor-ai/edge/models/: download_weights.py
factory-monitor-ai/edge/publisher/: detection_sink.py  heatmap_sink.py  run_edge.py
factory-monitor-ai/edge/tests/: conftest.py  test_debounce.py  test_detection_emit.py  test_detector.py  test_edge_image_smoke.sh  test_engine.py  test_engine_kafka_integration.py  test_heatmap_emit.py  test_multi_camera.py  test_roboflow_detector.py  test_zone_config.py
factory-monitor-ai/edge/tools/: roboflow_infer.py  roboflow_infer_local.py  roboflow_infer_video.py  score_video.py
factory-monitor-ai/edge/vision/: debounce.py  detector.py  engine.py  frame_source.py  roboflow_detector.py  zone_config.py
factory-monitor-ai/footage/: .gitignore  README.md  download_and_encode.sh  mediamtx.yml  verify_rtsp.sh
factory-monitor-ai/frontend/: .dockerignore  .env.development  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
factory-monitor-ai/frontend/src/: App.tsx  main.tsx  providers.tsx  setupTests.ts  vite-env.d.ts
factory-monitor-ai/frontend/src/components/: CameraWall.tsx  CountdownTimer.tsx  Heatmap.tsx  IncidentCard.tsx  IncidentList.tsx  (+3 more)
factory-monitor-ai/frontend/tests/: App.integration.test.tsx  App.live.test.tsx  App.smoke.test.tsx
factory-monitor-ai/infra/: kafka-init.sh  mediamtx.yml
factory-monitor-ai/load/: RUNBOOK.md
factory-monitor-ai/load/k6/: assert_slo_prom.sh  slo_loadtest.js
factory-monitor-ai/load/producer/: Dockerfile  anomaly_load.py
factory-monitor-ai/observability/alertmanager/: alertmanager.yml
factory-monitor-ai/observability/loki/: loki.yaml
factory-monitor-ai/observability/otel-collector/: config.yaml
factory-monitor-ai/observability/prometheus/: prometheus.yml
factory-monitor-ai/observability/promtail/: promtail.yaml
factory-monitor-ai/observability/tempo/: tempo.yaml
factory-monitor-ai/shared/contracts/: anomaly_event.example.json
(+88 files in other folders)
