[project]
name = "factory-monitor-ai"
version = "0.1.0"
description = "Factory Monitor AI — edge+cloud anomaly detection and escalation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "aiokafka>=0.11",
    "redis>=5",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
notifications = ["twilio>=9.0"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[kafka,postgres,redis]>=4.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5",
    "python-multipart>=0.0.9",
]
worker = [
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiokafka>=0.11",
    "redis>=5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloud*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["cloud/tests"]
addopts = "-ra"
log_level = "INFO"
markers = [
    "integration: spins up testcontainers (Docker required)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # UP042: converting `class X(str, Enum)` → StrEnum changes str(member) output
    # ("X.MEMBER" vs the bare value). The codebase uses .value for serialisation
    # but callers may rely on the current str() repr; defer conversion intentionally.
    "UP042",
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI Depends/Query/Body/Header/Form in route signatures is the intended pattern.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
