[project]
name = "factory-monitor-ai"
version = "0.1.0"
description = "Factory Monitor AI — edge+cloud anomaly detection and escalation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "aiokafka>=0.11",
    "redis>=5",
    "python-multipart>=0.0.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
notifications = ["twilio>=9.0"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[kafka,postgres,redis]>=4.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5",
    "python-multipart>=0.0.9",
]
worker = [
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    # psycopg2 (sync driver) is required by the make_due_collector scrape gauge,
    # which uses a dedicated sync engine on alembic_database_url. Without it the
    # escalation and notifier workers crash on boot registering that collector.
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiokafka>=0.11",
    "redis>=5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloud*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["cloud/tests"]
addopts = "-ra"
log_level = "INFO"
markers = [
    "integration: spins up testcontainers (Docker required)",
    "chaos: deterministic fault-injection reliability proofs (Docker required)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # UP042: converting `class X(str, Enum)` → StrEnum changes str(member) output
    # ("X.MEMBER" vs the bare value). The codebase uses .value for serialisation
    # but callers may rely on the current str() repr; defer conversion intentionally.
    "UP042",
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI Depends/Query/Body/Header/Form in route signatures is the intended pattern.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
